# howtobuildsoftware2026

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/PRPs/plans/: neurawork-cc-harness-exemplary-docs-selfhost.plan.md  neurawork-cc-harness-knowledge-compiler.plan.md
.claude/PRPs/prds/: neurawork-cc-harness.prd.md
claudemd-lerner/: .gitignore  CLAUDE.md  config.json
claudemd-lerner/_shared/: transcript.py
claudemd-lerner/_shared/tests/: test_repo_guard.py
claudemd-lerner/hooks/: cl-pre-compact.py  cl-session-start.py
docs/: ARCHITECTURE.md  INSTALL.md  WHEN-TO-USE.md
knowledge-base/: .gitignore  CLAUDE.md
knowledge-base/_shared/: __init__.py  gitctx.py  recon.py  repo_guard.py
knowledge-base/hooks/: pre-compact.py  session-end.py
knowledge-base/scripts/: compile.py  config.py  seed.py  seed_prompt.txt  utils.py
plugins/: CLAUDE.md
plugins/neurawork-cc-harness/: .gitignore  README.md
plugins/neurawork-cc-harness/engines/claudemd-lerner/payload/: AGENTS.md  pyproject.toml
plugins/neurawork-cc-harness/engines/claudemd-lerner/payload/hooks/: cl-session-end.py
plugins/neurawork-cc-harness/engines/claudemd-lerner/payload/scripts/: config.py  flush.py  seed.py  seed_prompt.txt  update.py  utils.py
plugins/neurawork-cc-harness/engines/knowledge-compiler/payload/: AGENTS.md  pyproject.toml
plugins/neurawork-cc-harness/engines/knowledge-compiler/payload/hooks/: session-start.py
plugins/neurawork-cc-harness/engines/knowledge-compiler/payload/scripts/: flush.py  lint.py  query.py
(+26 files in other folders)
